Murphy System/archive/artifacts/outputs/workspace_output_1769414375_2729.txt
  File "/workspace/murphy_backend_complete.py", line 2741
    enhanced_librarian_system = None
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expected 'except' or 'finally' block
